--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,12 @@ jobs:
         node-version: [20.x]
 
     steps:
-      - uses: pnpm/action-setup@v2
-
-      - name: Copy repository
+      - name: Clone repository
         uses: actions/checkout@v3
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8.6.5
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
