--- a/package.json
+++ b/package.json
@@ -17,42 +17,47 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "fixtures": "ts-node src/fixtures/index.ts",
+    "db:reset": "prisma db push --force-reset && prisma db seed && ts-node src/fixtures/index.ts"
   },
   "dependencies": {
     "@apollo/server": "^4.7.5",
     "@nestjs/apollo": "^12.0.7",
-    "@nestjs/common": "^10.0.3",
-    "@nestjs/core": "^10.0.3",
-    "@nestjs/graphql": "^12.0.7",
-    "@nestjs/platform-express": "^10.0.3",
-    "@nestjs/swagger": "^7.0.12",
-    "@prisma/client": "4.16.0",
+    "@nestjs/common": "^10.0.5",
+    "@nestjs/core": "^10.0.5",
+    "@nestjs/graphql": "^12.0.8",
+    "@nestjs/platform-express": "^10.0.5",
+    "@nestjs/swagger": "^7.1.1",
+    "@prisma/client": "^5.0.0",
     "graphql": "^16.7.1",
+    "graphql-type-json": "^0.3.2",
     "pm2": "^5.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "ulid": "^2.3.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.5",
+    "@faker-js/faker": "^8.0.2",
+    "@nestjs/cli": "^10.1.8",
     "@nestjs/schematics": "^10.0.1",
-    "@nestjs/testing": "^10.0.3",
+    "@nestjs/testing": "^10.0.5",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.2",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.1",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "eslint": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "jest": "^29.6.1",
     "prettier": "^2.8.8",
-    "prisma": "^4.16.1",
+    "prisma": "^5.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
