--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "console": "ts-node src/console.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -32,6 +33,7 @@
     "@prisma/client": "^5.0.0",
     "graphql": "^16.7.1",
     "graphql-type-json": "^0.3.2",
+    "nest-commander": "^3.11.1",
     "pm2": "^5.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
