--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.6.1",
+    "jest-cucumber": "^3.0.1",
     "prettier": "^2.8.8",
     "prisma": "^5.2.0",
     "source-map-support": "^0.5.21",
@@ -72,7 +73,7 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".*\\.(spec|steps)\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
