--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:watch": "jest -c jest.config.ts --watch",
+    "test:cov": "jest -c jest.config.ts --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:integration": "dotenv -e .env.test -- jest -c jest.integration.ts",
     "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
     "fixtures": "ts-node src/fixtures/index.ts",
-    "db:reset": "prisma db push --force-reset && prisma db seed && ts-node src/fixtures/index.ts"
+    "db:reset": "prisma db push --force-reset && prisma db seed && pnpm console fixtures",
+    "test:integration:suite": "just test_integration",
+    "test:db:reset": "dotenv -e .env.test -- pnpm db:reset"
   },
   "dependencies": {
     "@apollo/server": "^4.7.5",
@@ -31,6 +34,8 @@
     "@nestjs/platform-express": "^10.0.5",
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^5.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "graphql": "^16.7.1",
     "graphql-type-json": "^0.3.2",
     "nest-commander": "^3.11.1",
@@ -51,13 +56,14 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.6.1",
     "jest-cucumber": "^3.0.1",
     "prettier": "^2.8.8",
-    "prisma": "^5.2.0",
+    "prisma": "^5.3.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
@@ -65,23 +71,6 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.(spec|steps)\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
