--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "fixtures": "ts-node src/fixtures/index.ts",
     "db:reset": "prisma db push --force-reset && prisma db seed && pnpm console fixtures",
     "test:integration:suite": "just test_integration",
-    "test:db:reset": "dotenv -e .env.test -- pnpm db:reset"
+    "test:db:reset": "dotenv -e .env.test -- pnpm db:reset",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@apollo/server": "^4.7.5",
@@ -60,6 +61,7 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-cucumber": "^3.0.1",
     "prettier": "^2.8.8",
