--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,13 @@ services:
       POSTGRES_DB: carbonable_ccpm
     ports:
     - 5432:5432
+  redis:
+    image: redis:7.2-alpine3.18
+    restart: always
+    ports:
+      - 6379:6379
+    volumes:
+      - redis:/data
+volumes:
+  redis:
+    driver: local
