--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/apollo": "^12.0.7",
     "@nestjs/common": "^10.0.5",
     "@nestjs/core": "^10.0.5",
+    "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/platform-express": "^10.0.5",
     "@nestjs/swagger": "^7.1.1",
@@ -41,6 +42,7 @@
     "graphql-type-json": "^0.3.2",
     "nest-commander": "^3.11.1",
     "pm2": "^5.3.0",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "slugify": "^1.6.6",
