--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.14.0",
     "graphql": "^16.7.1",
     "graphql-type-json": "^0.3.2",
+    "lodash": "^4.17.21",
     "nest-commander": "^3.11.1",
     "pm2": "^5.3.0",
     "redis": "^4.6.10",
@@ -55,6 +56,7 @@
     "@nestjs/testing": "^10.0.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.4.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -67,11 +69,12 @@
     "jest": "^29.6.1",
     "jest-cucumber": "^3.0.1",
     "prettier": "^2.8.8",
-    "prisma": "^5.5.2",
+    "prisma": "^5.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
+    "ts-morph": "^20.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
