feature: fix dashboarding + allocations + reservations

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "UNLICENSED",
   "scripts": {
     "console": "ts-node src/console.ts",
+    "console:prod": "node dist/src/console.js",
+    "prebuild": "ts-node src/generate-gql-types.ts",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "pm2-runtime start dist/src/main.js --name ccrp-backend",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest -c jest.config.ts --watch",
