--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   db:
     image: postgres:latest
@@ -8,4 +8,14 @@ services:
       POSTGRES_USER: test
       POSTGRES_DB: carbonable_ccpm_test
     ports:
-    - 5432:5432
+      - 5432:5432
+  redis:
+    image: redis:7.2-alpine3.18
+    restart: always
+    ports:
+      - 6379:6379
+    volumes:
+      - redis:/data
+volumes:
+  redis:
+    driver: local
