--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@nestjs/core": "^10.0.5",
     "@nestjs/event-emitter": "^2.0.2",
     "@nestjs/graphql": "^12.0.8",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.5",
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^5.0.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.7.1",
@@ -56,6 +58,7 @@
     "@nestjs/cli": "^10.1.8",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.202",
