--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "pm2-runtime start dist/src/main.js --name ccrp-backend",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "dotenv -e .env.test -- jest --detectOpenHandles",
     "test:watch": "jest -c jest.config.ts --watch",
     "test:cov": "jest -c jest.config.ts --coverage --detectOpenHandles  --verbose",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
