--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csv-parser": "^3.0.0",
     "graphql": "^16.7.1",
     "graphql-type-json": "^0.3.2",
     "lodash": "^4.17.21",
+    "multer": "1.4.5-lts.1",
     "nest-commander": "^3.11.1",
     "pm2": "^5.3.0",
     "redis": "^4.6.10",
@@ -63,6 +65,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.202",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.4.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
