--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-cucumber": "^3.0.1",
+    "jest-mock-extended": "^2.0.4",
     "prettier": "^2.8.8",
     "prisma": "^5.16.1",
     "source-map-support": "^0.5.21",
