--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@nestjs/platform-express": "^10.0.5",
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^5.16.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
@@ -61,7 +61,7 @@
     "@nestjs/cli": "^10.1.8",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.5",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.202",
