refactor: .env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://carbonable:carbonable@localhost:5432/carbonable_ccpm"
+DATABASE_URL=DB_URL
+JWT_KEY=JWT_TOKEN 
+CARBONABLE_SALT=NUMBER
