--- a/.env.dist
+++ b/.env.dist
@@ -3,7 +3,7 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL=DB_URL
-JWT_KEY=JWT_TOKEN 
-CARBONABLE_SALT=NUMBER
+CARBONABLE_SALT=1
+ORG_ID='org_id_by_clerk'
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY='pk_test_by_clerk'
+CLERK_SECRET_KEY='sk_test_by_clerk'
