fix: db test (use database_url from template)

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "db:reset": "prisma db push --force-reset && prisma db seed && pnpm console fixtures",
     "db:init": "prisma db push --force-reset && prisma db seed",
     "test:integration:suite": "just test_integration",
-    "test:db:reset": "dotenv -e .env.test -- pnpm db:reset",
+    "test:db:reset": "dotenv -e .env.template -- pnpm db:reset",
     "prepare": "husky install"
   },
   "dependencies": {
