--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:watch": "jest -c jest.config.ts --watch",
     "test:cov": "jest -c jest.config.ts --coverage --detectOpenHandles  --verbose",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:integration": "dotenv -e .env.test -- jest -c jest.integration.ts --runInBand",
+    "test:integration": "dotenv -e .env.template -- jest -c jest.integration.ts --runInBand",
     "test:e1e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
     "fixtures": "ts-node src/fixtures/index.ts",
     "db:reset": "prisma db push --force-reset && prisma db seed && pnpm console fixtures",
