--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@nestjs/platform-express": "^10.0.5",
     "@nestjs/swagger": "^7.1.1",
     "@prisma/client": "^5.19.0",
+    "@nestjs/terminus": "^10.2.3",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "csv-parser": "^3.0.0",
